Fix splash actions spacing

--- a/app/assets/stylesheets/components/_splash.sass
+++ b/app/assets/stylesheets/components/_splash.sass
@@ -6,7 +6,7 @@
   left: 0
   right: 0
   background: $color-blue
-  z-index: 1024
+  z-index: -1
   +transform(translateY(-30px))
 
   &.animate
@@ -15,7 +15,7 @@
 .home-splash-content
   width: 600px
   margin: 0 auto
-  padding: 100px 0
+  padding: 100px 0 0
   color: white
 
   > p
@@ -24,10 +24,14 @@
     margin-bottom: 36px
 
 .home-splash-choices
+  width: 700px
+  margin: 0 auto
+
   > a
     position: relative
     display: inline-block
-    width: 195px
+    width: 190px
+    margin: 0 14px
     padding: 14px 0
     font-size: 30px
     font-weight: $font-weight-bold
@@ -40,18 +44,6 @@
 
       &:before
         display: block
-
-    &:first-child
-      text-align: left
-
-      &:before
-        left: -50px
-
-    &:last-child
-      text-align: right
-
-      &:before
-        left: 30px
 
     &:before
       position: absolute
