--- a/app/assets/stylesheets/components/_typography.sass
+++ b/app/assets/stylesheets/components/_typography.sass
@@ -8,6 +8,7 @@ body
     .home-splash
       opacity: 1
       +transform(translateY(0))
+      z-index: 1024
 
 a
   text-decoration: none
